# mtg-pure

./: .gitignore  LICENSE  README.md  mtg-pure.cabal
.cspell/: english-us.dict  haskell.dict  math.dict  mtg.dict  python.dict  software.dict  vernacular.dict
src/: LoadAllModules.hs  MtgPure.hs  compile-generate-gallery-single.bat  fourmolu.yaml  gallery.bat  ghci-compiled.bat  ghci-interpreted.bat  mtg-ghci.bat  mtg-pure.jsonc  run-ghci.bat
src/Ansi/: AnsiString.hs  Box.hs  Compile.hs  Math.hs  Old.hs
src/Ansi/TrueColor/: Debug.hs  FileFormat.hs  FindColoring.hs  FindRendering.hs  ImageToAnsi.hs  RenderedTile.hs  TileGrid.hs  Types.hs  VirtualChar.hs  VirtualCharTile.hs
src/App/: AnsiInspector.hs  CardGallery.hs
src/Control/Monad/: Access.hs  Util.hs
src/Data/: At.hs  Carousel.hs  ConsIndex.hs  Inst.hs  Nat.hs  ReadHelper.hs  SafeJson.hs  TupleN.hs  Virtual.hs  Zipper.hs
src/Data/Read/: Sep.hs  Symbol.hs
src/Demo/: AnsiBox.hs  AnsiChoiceMenu.hs  AnsiColors.hs  AnsiMagicBoard.hs
src/Demo/Ansi/: Box.hs  ChoiceMenu.hs  Colors.hs  MagicBoard.hs
src/Demo/Misc/SerializableMonadApi/: ProofOfConcept.hs  Variable.hs  VariableMonad.hs
src/Demo/MtgPure/: Gameplay.hs
src/Demo/SerializableMonadApi/: ProofOfConcept.hs  Variable.hs  VariableMonad.hs
src/MtgPure/: AllCards.hs  Cards.hs  Engine.hs  Model.hs  ModelCombinators.hs  ShowCard.hs
src/MtgPure/Client/: Console.hs  Terminal.hs  repl-help.txt
src/MtgPure/Client/Terminal/: CommandInput.hs  Monad.hs  PriorityAction.hs  Render.hs
src/MtgPure/Client/Terminal/Fwd/: Api.hs  Impl.hs  Type.hs
src/MtgPure/Engine/: ActivateCast.hs  CaseOf.hs  Core.hs  Enact.hs  Fwd.hs  Legality.hs  Monad.hs  Orphans.hs  Pay.hs  PayMana.hs  PerformElections.hs  PlayGame.hs  PlayLand.hs  Priority.hs  Prompt.hs  PutOntoBattlefield.hs  Resolve.hs  Satisfies.hs  State.hs  StateBasedActions.hs  Turn.hs
src/MtgPure/Engine/Fwd/: Api.hs  Impl.hs  Type.hs  Wrap.hs
src/MtgPure/Engine/Orphans/: ZO.hs
src/MtgPure/Model/: AbilityType.hs  AnyObject.hs  Artifact.hs  ArtifactType.hs  BasicLandType.hs  Battle.hs  Battlefield.hs  CardName.hs  CardSet.hs  CardType.hs  Color.hs  ColorToManaType.hs  ColoredMana.hs  ColorlessMana.hs  Colors.hs  ColorsLike.hs  Combinators.hs  Cost.hs  CountMana.hs  Counter.hs  Creature.hs  CreatureType.hs  Damage.hs  Deck.hs  Defense.hs  EffectType.hs  ElectStage.hs  Enchantment.hs  Exile.hs  GenericMana.hs  Graveyard.hs  Hand.hs  HasManaSymbol.hs  IsCardList.hs  IsManaAbility.hs  IsObjectType.hs  Land.hs  LandType.hs  Library.hs  Life.hs  (+48 more)
src/MtgPure/Model/Internal/: GenerateToObjectN.hs  IsObjectType.hs  Object.hs  ObjectId.hs  Variable.hs
src/MtgPure/Model/Mana/: CountMana.hs  HasManaSymbol.hs  IsManaAbility.hs  Mana.hs  ManaCost.hs  ManaPool.hs  ManaSymbol.hs  ManaType.hs  ManaTypeToColor.hs  PrintedManaCost.hs  Snow.hs  ToMana.hs  ToManaCost.hs  ToManaPool.hs
src/MtgPure/Model/Object/: IndexOT.hs  IsObjectType.hs  LitOT.hs  LitOTN.hs  MapObjectN.hs  OT.hs  OTKN.hs  OTKN_.hs  OTKind.hs  OTN.hs  OTNAliases.hs  OTN_.hs  Object.hs  ObjectId.hs  ObjectN.hs  ObjectN_.hs  ObjectType.hs  ObjectTypeN.hs  PromoteIdToObjectN.hs  SObjectType.hs  SingOT.hs  SmartConstructors.hs  ToObjectN.hs  ViewObjectN.hs  VisitObjectN.hs
src/MtgPure/Model/Object/Singleton/: Any.hs  Card.hs  NonCreatureCard.hs  Permanent.hs  Spell.hs
src/MtgPure/Model/Object/ToObjectN/: Classes.hs  CodeGen.hs
src/MtgPure/Model/ObjectN/: Type.hs
src/MtgPure/Model/ObjectType/: Any.hs  Card.hs  Index.hs  Kind.hs  NonCreatureCard.hs  Permanent.hs  Spell.hs
src/MtgPure/Model/Recursive/: Eq.hs  Ord.hs  Show.hs  Tree.hs
src/MtgPure/Model/ToObjectN/: Classes.hs  CodeGen.hs
src/MtgPure/Model/ZoneObject/: Convert.hs  ZoneObject.hs
src/MtgPure/Test/: Demo.hs  Direct.hs  MagicContUnit.hs  MountainRagingGoblin.hs  MountainShock.hs  MountainStoneRain.hs  Variabled.hs  VariabledMonad.hs
src/MtgPure/Test/Engine/Unit/: MagicCont.hs  PayMana.hs
src/MtgPure/Test/Game/: Hybrid.hs  ManaAbility.hs  MountainRagingGoblin.hs  MountainShock.hs  MountainStoneRain.hs  RagingGoblin.hs  Shock.hs  StoneRain.hs
src/MtgPure/Test/SerializableMonadApi/: ProofOfConcept.hs  Variabled.hs  VariabledMonad.hs
src/Script/: GenerateLoadAllModules.hs  MtgPureConfig.hs  ScryfallDownloader.hs
src/Script/GenerateGalleryBatched/: Main.hs  card-names.txt
src/Script/GenerateGallerySingle/: Args.hs  Main.hs
src/System/: Keyboard.hs
src/Test/Engine/Unit/: MagicCont.hs  PayMana.hs
src/Test/Game/: Hybrid.hs  ManaAbility.hs  RagingGoblin.hs  Shock.hs  StoneRain.hs
