cabal-version:      2.4
name:               mtg-pure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             'Thomas Eding'
maintainer:         'thomaseding@gmail.com'

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MtgPure

    default-extensions:
        AllowAmbiguousTypes,
        ApplicativeDo,
        BangPatterns,
        BlockArguments,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveFunctor,
        EmptyDataDecls,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        LambdaCase,
        MagicHash,
        MultiParamTypeClasses,
        MultiWayIf,
        OverloadedStrings,
        PatternSynonyms,
        PolyKinds,
        QuantifiedConstraints,
        RankNTypes,
        RecursiveDo,
        --Safe,
        ScopedTypeVariables,
        StandaloneDeriving,
        StrictData,
        TemplateHaskellQuotes,
        TypeApplications,
        TypeFamilyDependencies,
        ViewPatterns

    other-extensions:
        ExtendedDefaultRules

    build-depends:
       aeson ^>=2.1.1.0,
       ansi-terminal ^>=0.11.4,
       array ^>=0.5.4.0,
       async ^>=2.2.4,
       base ^>=4.14.3.0,
       binary ^>=0.8.8.0,
       bytestring ^>=0.10.12.0,
       colour ^>=2.3.6,
       containers ^>=0.6.5.1,
       directory ^>=1.3.6.0,
       dlist ^>=1.0,
       --fin ^>=0.2.1,
       filepath ^>=1.4.2.1,
       http-conduit ^>=2.3.8,
       JuicyPixels ^>=3.3.8,
       JuicyPixels-extra ^>=0.5.2,
       monad-par ^>=0.3.5,
       mtl ^>=2.2.2,
       parsec ^>=3.1.14.0,
       no-buffering-workaround ^>=0.1.0.0,
       parsec ^>=3.1.14.0,
       process ^>=1.6.13.2,
       random ^>=1.2.1.1,
       singletons ^>=3.0.2,
       split ^>=0.2.3.5,
       Stream ^>=0.4.7.2,
       template-haskell ^>=2.16.0.0,
       time ^>=1.9.3,
       transformers ^>=0.5.6.2,
       vector ^>=0.13.0.0

    hs-source-dirs:   src
    default-language: Haskell2010
