cabal-version:      2.4
name:               mtg-pure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             'Thomas Eding'
maintainer:         'thomaseding@gmail.com'

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Ansi.AnsiString
        Ansi.Box
        Ansi.Compile
        Ansi.Math
        Ansi.Old
        Ansi.TrueColor.Debug
        Ansi.TrueColor.FileFormat
        Ansi.TrueColor.FindColoring
        Ansi.TrueColor.FindRendering
        Ansi.TrueColor.ImageToAnsi
        Ansi.TrueColor.RenderedTile
        Ansi.TrueColor.TileGrid
        Ansi.TrueColor.Types
        Ansi.TrueColor.VirtualChar
        Ansi.TrueColor.VirtualCharTile
        App.AnsiInspector
        App.CardGallery
        Control.Monad.Access
        Control.Monad.Util
        Data.Carousel
        Data.ConsIndex
        Data.Inst
        Data.Nat
        Data.Read.Sep
        Data.Read.Symbol
        Data.SafeJson
        Data.TupleN
        Data.Virtual
        Data.Zipper
        Demo.Ansi.Box
        Demo.Ansi.ChoiceMenu
        Demo.Ansi.Colors
        Demo.Ansi.MagicBoard
        Demo.Misc.SerializableMonadApi.ProofOfConcept
        Demo.Misc.SerializableMonadApi.Variable
        Demo.Misc.SerializableMonadApi.VariableMonad
        Demo.MtgPure.Gameplay
        LoadAllModules
        MtgPure
        MtgPure.AllCards
        MtgPure.Cards
        MtgPure.Client.Terminal.Fwd.Api
        MtgPure.Client.Terminal.Fwd.Impl
        MtgPure.Client.Terminal.Fwd.Type
        MtgPure.Client.Terminal.CommandInput
        MtgPure.Client.Terminal.Monad
        MtgPure.Client.Terminal.PriorityAction
        MtgPure.Client.Terminal.Render
        MtgPure.Engine.ActivateCast
        MtgPure.Engine.CaseOf
        MtgPure.Engine.Core
        MtgPure.Engine.Enact
        MtgPure.Engine.Fwd.Api
        MtgPure.Engine.Fwd.Impl
        MtgPure.Engine.Fwd.Type
        MtgPure.Engine.Legality
        MtgPure.Engine.Monad
        MtgPure.Engine.Orphans
        MtgPure.Engine.Orphans.ZO
        MtgPure.Engine.Pay
        MtgPure.Engine.PayMana
        MtgPure.Engine.PerformElections
        MtgPure.Engine.PlayGame
        MtgPure.Engine.PlayLand
        MtgPure.Engine.Priority
        MtgPure.Engine.Prompt
        MtgPure.Engine.PutOntoBattlefield
        MtgPure.Engine.Resolve
        MtgPure.Engine.Satisfies
        MtgPure.Engine.State
        MtgPure.Engine.StateBasedActions
        MtgPure.Engine.Turn
        MtgPure.Model.AbilityType
        MtgPure.Model.Artifact
        MtgPure.Model.ArtifactType
        MtgPure.Model.BasicLandType
        MtgPure.Model.Battlefield
        MtgPure.Model.CardName
        MtgPure.Model.CardSet
        MtgPure.Model.CardType
        MtgPure.Model.Color
        MtgPure.Model.ColorToManaType
        MtgPure.Model.Colors
        MtgPure.Model.ColorsLike
        MtgPure.Model.Combinators
        MtgPure.Model.Counter
        MtgPure.Model.Creature
        MtgPure.Model.CreatureType
        MtgPure.Model.Damage
        MtgPure.Model.Deck
        MtgPure.Model.EffectType
        MtgPure.Model.ElectStage
        MtgPure.Model.Enchantment
        MtgPure.Model.Graveyard
        MtgPure.Model.Hand
        MtgPure.Model.IsCardList
        MtgPure.Model.Land
        MtgPure.Model.LandType
        MtgPure.Model.Library
        MtgPure.Model.Life
        MtgPure.Model.Linear
        MtgPure.Model.Loyalty
        MtgPure.Model.Mana.CountMana
        MtgPure.Model.Mana.HasManaSymbol
        MtgPure.Model.Mana.IsManaAbility
        MtgPure.Model.Mana.Mana
        MtgPure.Model.Mana.ManaCost
        MtgPure.Model.Mana.ManaPool
        MtgPure.Model.Mana.ManaSymbol
        MtgPure.Model.Mana.ManaType
        MtgPure.Model.Mana.ManaTypeToColor
        MtgPure.Model.Mana.PrintedManaCost
        MtgPure.Model.Mana.Snow
        MtgPure.Model.Mana.ToMana
        MtgPure.Model.Mana.ToManaCost
        MtgPure.Model.Mana.ToManaPool
        MtgPure.Model.Mulligan
        MtgPure.Model.Object.IndexOT
        MtgPure.Model.Object.IsObjectType
        MtgPure.Model.Object.LitOTN
        MtgPure.Model.Object.MapObjectN
        MtgPure.Model.Object.OT
        MtgPure.Model.Object.OTKN
        MtgPure.Model.Object.OTN
        MtgPure.Model.Object.OTNAliases
        MtgPure.Model.Object.Object
        MtgPure.Model.Object.ObjectId
        MtgPure.Model.Object.ObjectN
        MtgPure.Model.Object.PromoteIdToObjectN
        MtgPure.Model.Object.SingOT
        MtgPure.Model.Object.Singleton.Any
        MtgPure.Model.Object.Singleton.Card
        MtgPure.Model.Object.Singleton.NonCreatureCard
        MtgPure.Model.Object.Singleton.Permanent
        MtgPure.Model.Object.Singleton.Spell
        MtgPure.Model.Object.SmartConstructors
        MtgPure.Model.Object.ToObjectN
        MtgPure.Model.Object.ToObjectN.Classes
        MtgPure.Model.Object.ToObjectN.CodeGen
        MtgPure.Model.Object.ToObjectN.Instances
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_10_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_10_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_10_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_11_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_11_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_12_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_1
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_2
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_3
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_4
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_1_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_2
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_3
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_4
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_2_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_3
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_4
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_3_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_4
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_4_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_5
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_5_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_6
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_6_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_7
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_7_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8_8
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_8_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_9
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_9_10
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_9_11
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_9_12
        MtgPure.Model.Object.ToObjectN.Instances.ToObject_9_9
        MtgPure.Model.Object.ViewObjectN
        MtgPure.Model.Object.VisitObjectN
        MtgPure.Model.Permanent
        MtgPure.Model.Phase
        MtgPure.Model.PhaseStep
        MtgPure.Model.Planeswalker
        MtgPure.Model.Player
        MtgPure.Model.Power
        MtgPure.Model.PrettyType
        MtgPure.Model.Rarity
        MtgPure.Model.Recursive
        MtgPure.Model.Recursive.Ord
        MtgPure.Model.Recursive.Show
        MtgPure.Model.Recursive.Tree
        MtgPure.Model.Sideboard
        MtgPure.Model.Stack
        MtgPure.Model.Step
        MtgPure.Model.Supertype
        MtgPure.Model.TimePoint
        MtgPure.Model.Toughness
        MtgPure.Model.Variable
        MtgPure.Model.Zone
        MtgPure.Model.ZoneObject.Convert
        MtgPure.Model.ZoneObject.ZoneObject
        Script.GenerateGalleryBatched.Main
        Script.GenerateGallerySingle.Args
        Script.GenerateGallerySingle.Main
        Script.GenerateLoadAllModules
        Script.MtgPureConfig
        Script.ScryfallDownloader
        System.Keyboard
        Test.Engine.Unit.MagicCont
        Test.Engine.Unit.PayMana
        Test.Game.Hybrid
        Test.Game.ManaAbility
        Test.Game.RagingGoblin
        Test.Game.Shock
        Test.Game.StoneRain

    default-extensions:
        AllowAmbiguousTypes,
        ApplicativeDo,
        BangPatterns,
        BlockArguments,
        ConstraintKinds,
        DataKinds,
        DefaultSignatures,
        DeriveFunctor,
        EmptyDataDecls,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        LambdaCase,
        MagicHash,
        MultiParamTypeClasses,
        MultiWayIf,
        OverloadedStrings,
        PatternSynonyms,
        PolyKinds,
        QuantifiedConstraints,
        RankNTypes,
        RecursiveDo,
        --Safe,
        ScopedTypeVariables,
        StandaloneDeriving,
        StrictData,
        TemplateHaskellQuotes,
        TypeApplications,
        TypeFamilyDependencies,
        TypeOperators,
        ViewPatterns

    other-extensions:
        ExtendedDefaultRules

    ghc-options: -Wall -Werror -Wno-type-defaults -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcpp-undef -Wmissing-export-lists

    build-depends:
       aeson ^>=2.1.1.0,
       ansi-terminal ^>=0.11.4,
       array ^>=0.5.4.0,
       async ^>=2.2.4,
       base ^>=4.17.2.1,
       binary ^>=0.8.8.0,
       bytestring ^>=0.11.5.3,
       colour ^>=2.3.6,
       containers ^>=0.6.5.1,
       directory ^>=1.3.8.5,
       dlist ^>=1.0,
       --fin ^>=0.2.1,
       filepath ^>=1.4.2.1,
       http-conduit ^>=2.3.8,
       JuicyPixels ^>=3.3.8,
       JuicyPixels-extra ^>=0.5.2,
       monad-par ^>=0.3.5,
       mtl ^>=2.2.2,
       parsec ^>=3.1.14.0,
       no-buffering-workaround ^>=0.1.0.0,
       parsec ^>=3.1.14.0,
       process ^>=1.6.13.2,
       random ^>=1.2.1.1,
       split ^>=0.2.3.5,
       Stream ^>=0.4.7.2,
       template-haskell ^>=2.19.0.0,
       time ^>=1.9.3,
       transformers ^>=0.5.6.2,
       vector ^>=0.13.0.0

    hs-source-dirs:   src
    default-language: Haskell2010
